--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "clean": "rm -rf ./public"
   },
   "dependencies": {
+    "eleventy-plugin-social-img": "^1.3.3",
     "remove": "^0.1.5"
   }
 }
