--- a/.github/workflows/11ty-gh-pages.yaml
+++ b/.github/workflows/11ty-gh-pages.yaml
@@ -38,7 +38,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install -g yarn
       - run: yarn install
-      - run: yarn build          
+      - run: yarn build
+        env:
+          URL: https://          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
