--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.1",
-    "@11ty/eleventy-img": "^0.6.0",
+    "@11ty/eleventy": "^1.0.2",
+    "@11ty/eleventy-img": "^3.0.0",
     "@11ty/eleventy-plugin-rss": "^1.0.9",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@fullhuman/postcss-purgecss": "^3.1.3",
@@ -19,15 +19,15 @@
     "html-minifier": "^4.0.0",
     "mini-css-extract-plugin": "^1.3.3",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.1",
+    "postcss": "^8.0.0",
     "postcss-color-mod-function": "^3.0.3",
-    "postcss-import": "^14.0.0",
+    "postcss-import": "^15.0.0",
     "postcss-loader": "^4.1.0",
-    "postcss-preset-env": "^6.7.0",
+    "postcss-preset-env": "^8.0.0",
     "terser-webpack-plugin": "^5.1.4",
     "webpack": "^5.11.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-manifest-plugin": "^3.0.0"
+    "webpack-cli": "^4.0.0",
+    "webpack-manifest-plugin": "4.1.1"
   },
   "scripts": {
     "dev": "run-p dev:*",
